final landing page master

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,6 @@
 {{> landing-what}}
 {{> landing-apply}}
 {{> landing-who}}
+{{> landing-call}}
 <!-- {{> landing-call}} -->
 <script type="text/javascript">$(index)</script>
